refactor!: rename package to mx.rafex.ether.sqlite + split Maven modules
1. Package rename: mx.rafex.sqlite → mx.rafex.ether.sqlite
   - git mv de todos los fuentes Java (java25 + java21 + tests)
   - Actualización de package, import y referencias de clase en todos
     los ficheros .java, pom.xml, Dockerfiles y release.yml

2. División en dos módulos Maven independientes:
   - ether-sqlite/         (Java 25 stable, JEP 454, sin --enable-preview)
     • groupId: mx.rafex.ether
     • artifactId: ether-sqlite-runtime
     • perfil native → imageName: ether-sqlite
     • Elimina perfiles java21 y native-java21
   - ether-sqlite-java21/  (Java 21 preview, JEP 442, --enable-preview)
     • groupId: mx.rafex.ether
     • artifactId: ether-sqlite-java21-runtime
     • --release 21 + --enable-preview en compilador y surefire
     • perfil native → imageName: ether-sqlite-java21, --enable-preview AOT

3. release.yml: jobs java21 apuntan a ether-sqlite-java21/, sin -Pjava21
   Artefactos Java 21: ether-sqlite-java21-runtime-{v}.jar / -fat.jar

4. Dockerfile.java-test: etapa java25-tester + etapa java21-tester
   (eclipse-temurin:21-jdk para bytecode preview)

5. test-release/Main.java: imports actualizados al nuevo package

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>